--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Letter Scramble</title>
-    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="main.css" />
   </head>
 
   <body>
@@ -111,6 +111,6 @@ Enter your suggestions </textarea
     <footer id="main-footer">
       <p>Copyright &copy;2020 Letter Scramble</p>
     </footer>
-    <script src="./js/main.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
